cut down on thumb-twiddling, low-workload threads. use timers/dispatchers instead, the threadpools are bored to death anyway
and some other optimizations too


git-svn-id: http://svn.vuze.com/public/client@15404 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2